--- a/index.html
+++ b/index.html
@@ -3,17 +3,68 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Tom Watts HomePage</title>
+  <title>Tom Watts</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
 
       <link rel="stylesheet" href="css/style.css">
+      <link rel="icon" href="smiley.png">
 
 
 </head>
+
+
+
+
 <div class="fullscreen">
+
+  <div class="icons1">
+  <a href="http://tomwatts.co.nz" style="text-decoration: none; color:#000;">
+  <img src="computer2.png"> <br>
+  home </a>
+
+  <br> <br> <br>
+
+  <a href="mailto:tom@tomwatts.co.nz" style="text-decoration: none; color:#000;">
+  <img src="email3.png"> <br>
+  email </a>
+
+  <br> <br> <br>
+
+  <a href="http://github.com/Tom-Watts" style="text-decoration: none; color:#000;">
+  <img src="defrag.png"> <br>
+  github </a>
+
+<br> <br> <br>
+
+
+  <a href="http:/tomwatts.co.nz" style="text-decoration: none; color:#000;">
+  <img src="question.png"> <br>
+  about </a>
+
+
+  </div>
+
+
+
+
+
+  <div class="icons2">
+  <img src="cd.png"> <br>
+  music
+
+  <br> <br> <br>
+
+  </div>
+
+
+
 </div>
+
+
+
+
 <body>
 
 
@@ -28,12 +79,12 @@
     </div>
     <div class="wow">07:30 PM &nbsp;&nbsp;&nbsp;</div>
   </footer>
-  <section class="notepad">
+
+
+
+  <section class="untitled">
     <header><span class="icon"><span>unimplemented menu</span></span><span>Untitled - Notepad</span><span class="actions">
-        <button class="nosp"></button>
-        <button class="nosp"></button>
-        <button class="nosp"></button>
-        <button></button></span></header>
+        </span></header>
     <nav>
       <div style="padding-left:3px;">
         <button>File</button>
@@ -52,7 +103,7 @@
   </section>
 
 
-  <section class="notepad2" lang="ja">
+  <section class="contact" lang="ja">
     <header><span class="icon"></span><span>Contact</span></header>
     <nav>
       <div style="padding-left:3px;">
@@ -73,7 +124,7 @@ GitHub: github.com/Tom-Watts
   </section>
 
 
-  <section class="test">
+  <section class="news">
     <header><span class="icon"></span><span>News</span><span class="actions">
         <button class="nosp"></button>
         <button class="nosp"></button>
