very big updategit add .git add .git add .

--- a/index.html
+++ b/index.html
@@ -46,17 +46,11 @@
 
   </div>
 
-
-
-
-
-  <div class="icons2">
+  <!-- <div class="icons2">
   <img src="cd.png"> <br>
   music
-
   <br> <br> <br>
-
-  </div>
+  </div> -->
 
 
 
@@ -142,7 +136,7 @@ GitHub: github.com/Tom-Watts
         <input placeholder="aaaaaaaaaaaaaaaaaaaaaa"/><img src="https://vignette4.wikia.nocookie.net/tamagotchi/images/4/42/Mimitchi_sprite.png" title="i do nothing"/>
       </div>
     </nav>
-    <textarea>Wow Hello!</textarea>
+    <textarea></textarea>
     <footer><span></span></footer>
   </section>
 </main>
