--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
     <button class="start">Start</button>
       <button class="start">Untitled - Notepad</button>
       <button class="start">News</button>
-      <button class="start">Contact</button>
     <div class="taskslist">
     </div>
     <div class="wow">07:30 PM &nbsp;&nbsp;&nbsp;</div>
@@ -88,16 +87,16 @@
       </div>
       <navrule></navrule>
       <div class="flexcontainer"><span>Address</span>
-        <input placeholder="http://ggogggle.com/"/>
+        <input placeholder="http:/tomwatts.co.nz"/>
       </div>
       <navrule></navrule>
     </nav>
     <textarea>Page under construction!</textarea>
-    <footer><span>wow</span></footer>
+    <footer><span></span><span></span><span></span><span style="flex-basis:32px; flex-grow:0;"></span></footer>
   </section>
 
 
-  <section class="contact" lang="ja">
+  <!-- <section class="contact" lang="ja">
     <header><span class="icon"></span><span>Contact</span></header>
     <nav>
       <div style="padding-left:3px;">
@@ -115,15 +114,13 @@ Twitter: twitter.com/zonkosoft
 GitHub: github.com/Tom-Watts
     </textarea>
     <footer><span>No files selected</span><span></span><span>69.0GB</span><span style="flex-basis:32px; flex-grow:0;"></span></footer>
-  </section>
+  </section> -->
 
 
   <section class="news">
     <header><span class="icon"></span><span>News</span><span class="actions">
-        <button class="nosp"></button>
-        <button class="nosp"></button>
-        <button class="nosp"></button>
-        <button></button></span></header>
+
+        </span></header>
     <nav>
       <div style="padding-left:3px;">
         <button>File</button>
@@ -133,10 +130,10 @@ GitHub: github.com/Tom-Watts
       </div>
       <navrule></navrule>
       <div class="flexcontainer withgrip">
-        <input placeholder="aaaaaaaaaaaaaaaaaaaaaa"/><img src="https://vignette4.wikia.nocookie.net/tamagotchi/images/4/42/Mimitchi_sprite.png" title="i do nothing"/>
+        <input placeholder=""/><img src="https://vignette4.wikia.nocookie.net/tamagotchi/images/4/42/Mimitchi_sprite.png" title="i do nothing"/>
       </div>
     </nav>
-    <textarea></textarea>
+    <textarea>This web site is currently under construction. Please come back later!</textarea>
     <footer><span></span></footer>
   </section>
 </main>
