--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
       <link rel="stylesheet" href="css/style.css">
-      <link rel="icon" href="smiley.png">
+      <link rel="icon" href="cd.png">
 
 
 </head>
@@ -21,20 +21,22 @@
 
   <div class="icons1">
   <a href="http://tomwatts.co.nz" style="text-decoration: none; color:#000;">
-  <img src="computer2.png"> <br>
+  <img src="computer3.png"> <br>
   home </a>
 
   <br> <br> <br>
 
-  <a href="mailto:tom@tomwatts.co.nz" style="text-decoration: none; color:#000;">
-  <img src="email3.png"> <br>
-  email </a>
 
-  <br> <br> <br>
 
   <a href="http://github.com/Tom-Watts" style="text-decoration: none; color:#000;">
   <img src="defrag.png"> <br>
   github </a>
+
+<br> <br> <br>
+
+<a href="mailto:tom@tomwatts.co.nz" style="text-decoration: none; color:#000;">
+<img src="smiley.png"> <br>
+email </a>
 
 <br> <br> <br>
 
@@ -64,19 +66,19 @@
 
 <main class="desktop">
 
-  <footer class="taskbar">
+  <!-- <footer class="taskbar">
     <button class="start">Start</button>
       <button class="start">Untitled - Notepad</button>
       <button class="start">News</button>
     <div class="taskslist">
     </div>
     <div class="wow">07:30 PM &nbsp;&nbsp;&nbsp;</div>
-  </footer>
+  </footer> -->
 
 
 
   <section class="untitled">
-    <header><span class="icon"><span>unimplemented menu</span></span><span>Untitled - Notepad</span><span class="actions">
+    <header><span>Untitled - Notepad</span><span class="actions">
         </span></header>
     <nav>
       <div style="padding-left:3px;">
@@ -85,10 +87,10 @@
         <button>View</button>
         <button>Help</button>
       </div>
-      <navrule></navrule>
-      <div class="flexcontainer"><span>Address</span>
+      <!-- <navrule></navrule> -->
+      <!-- <div class="flexcontainer"><span>Address</span>
         <input placeholder="http:/tomwatts.co.nz"/>
-      </div>
+      </div> -->
       <navrule></navrule>
     </nav>
     <textarea>Page under construction!</textarea>
@@ -129,9 +131,9 @@ GitHub: github.com/Tom-Watts
         <button>Help</button>
       </div>
       <navrule></navrule>
-      <div class="flexcontainer withgrip">
+      <!-- <div class="flexcontainer withgrip">
         <input placeholder=""/><img src="https://vignette4.wikia.nocookie.net/tamagotchi/images/4/42/Mimitchi_sprite.png" title="i do nothing"/>
-      </div>
+      </div> -->
     </nav>
     <textarea>This web site is currently under construction. Please come back later!</textarea>
     <footer><span></span></footer>
