--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ a {
 <div class="bgimg-1">
   <div class="top">
     <a href="https://github.com/Tom-Watts"> GitHub </a> |
-    <a href="https://twitter.com/zonko-soft"> Twitter </a> |
+    <a href="https://twitter.com/zonkosoft"> Twitter </a> |
     <a href="mailto:tom@tomwatts.co.nz"> Email </a>
     </div>
 
