new icon, bg resize

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 
-<link rel="icon" href="cd.png">
+<link rel="icon" href="tws.png">
 <title>Tom Watts</title>
 
 
@@ -73,9 +73,9 @@ a {
 
 <div class="bgimg-1">
   <div class="top">
-    <a href="https://github.com/Tom-Watts"> GitHub </a> |
+    <a href="mailto:tom@tomwatts.co.nz"> Email </a> |
     <a href="https://twitter.com/zonkosoft"> Twitter </a> |
-    <a href="mailto:tom@tomwatts.co.nz"> Email </a>
+    <a href="https://github.com/Tom-Watts"> GitHub </a>
     </div>
 
 
