--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@ a {
 
 <div class="bgimg-1">
   <div class="top">
+    <a href="projects.html"> Projects </a> |
     <a href="mailto:tom@tomwatts.co.nz"> Email </a> |
     <a href="https://twitter.com/zonkosoft"> Twitter </a> |
+    <a href="skills.html"> Skills </a> |
     <a href="https://github.com/Tom-Watts"> GitHub </a>
     </div>
 
