Added a few projects

--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@ a {
   text-decoration: none;
 }
 
+.fill img {
+    flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%
+}
+
 </style>
 </head>
 <body>
