--- a/projects.html
+++ b/projects.html
@@ -46,6 +46,23 @@
 	<hr>
 
   <h3>Zonko Zonko Game</h3>
+  <p>This is an ongoing personal project made in Unity using C# which I have spent at least a few
+months on. It is a cute, top down isometric game designed for both Mobile and PC devices. The
+main character, Squishy works as a pharmaceutical delivery boy for a manic professor. A video and source
+code can be viewed on my website. Note a lot of the code was written when I was in first year, so
+is not an indication of the quality of the code I write today ( I have improved a lot! ). </p>
+<center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/nKJUGGuWmWg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
+</center>
+  <a href="https://github.com/Tom-Watts/ZonkoZonko-Game" style="color: #000000"> <b> Source Code  </b></a> <br>
+  <hr>
+
+<h3>Zompy Store</h3>
+A front end wrapper for a Shopify store, made in the space of 5 days. This is my first go using: Ionic, TypeScript and GraphQL.
+<br>
+<a href="https://youtu.be/BN6A6zoGWgM" style="color: #000000"> <b> Video Demo  </b></a> <br>
+
+  <a href="https://github.com/Tom-Watts/Zompy-Store" style="color: #000000"> <b> Source Code  </b></a> <br>
 
 
 </main>
