--- a/skills.html
+++ b/skills.html
@@ -51,7 +51,7 @@
 
 <li>   <b> Web and Mobile Development </b> <br>
   GraphQL and REST API design. <br>
-  Frameworks: Angular, React, Ionic, React Native <br>
+  Frameworks: (Newbie) Angular, React, Ionic, React Native <br>
   HTML, CSS
 
 </li>  <br>
