--- a/projects.html
+++ b/projects.html
@@ -48,8 +48,7 @@
   <h3>Zonko Zonko Game</h3>
   <p>This is an ongoing personal project made in Unity using C# which I have spent at least a few
 months on. It is a cute, top down isometric game designed for both Mobile and PC devices. The
-main character, Squishy works as a pharmaceutical delivery boy for a manic professor. A video and source
-code can be viewed on my website. Note a lot of the code was written when I was in first year, so
+main character, Squishy works as a pharmaceutical delivery boy for a manic professor. Note a lot of the code was written when I was starting out, so
 is not an indication of the quality of the code I write today ( I have improved a lot! ). </p>
 <center>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/nKJUGGuWmWg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
