--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
 
   <div id="container">
 <header>
-	<h1>Projects</h1>
+	<h1>Recent Projects</h1>
 </header>
 
 <main>
@@ -38,8 +38,11 @@
 	<p>
     NeuroEvolution is the process of evolving the weights, parameters and structures of Neural Networks. Currently the most popular method is called NEAT (NeuroEvolution of Augmenting Topologies).
     As part of a paid summer research scholarship (funded by Victoria University of Wellington) I was tasked with coming up
-    with a new algorithm which can work well in high dimensional domains (such as Computer Vision and Genomics). Currently NEAT struggles in high dimensional areas. Initially I experimted using backpropagation with PyTorch as a local seach method for the weights of the networks, however I soon found finding the correct structure (or topology) is as important as learning weights. I then introduced a method which uses mutual information for selecting inputs, and forming new nodes. Despite offering some improvements, these methods were still quite slow, particularly with higher dimensional input spaces. <br> <br>
-  Blocky Net: Is a totally new method of NeuroEvolution, where the types of hidden nodes (ReLU, Sigmoid, Tanh and so on ), weights, and connections between layers are rapidly optimized. This method is designed to overcome typical problems in NEAT such as bloated topologies, and slow learning time. The method generally outperforms NEAT in most high dimensional domains (using MNIST, NLP, Genomics and Mass Spectronomy datasets). It also has embedded feature selection, and since the networks are generally compact, they are relatively easy to intepret compared to standard Neural Networks. <br> <br>
+    with a new algorithm which can work well in high dimensional domains (such as Computer Vision and Genomics). Currently NEAT struggles on high dimensional datasets. Initially I experimented using backpropagation with PyTorch as a local seach method for the weights of the networks, however I soon found finding the correct structure (or topology) is as important as learning weights. I then introduced a method which uses mutual information for selecting inputs, and forming new nodes. Despite offering some improvements, these methods were still quite slow, particularly with higher dimensional input spaces. <br> <br>
+  Blocky Net: Is a totally new method of NeuroEvolution, where the types of hidden nodes (ReLU, Sigmoid, Tanh...), weights, and connections between layers are generated and optimized. This method is designed to overcome typical problems in NEAT such as bloated topologies, and slow learning times. The method generally outperforms NEAT in most high dimensional domains (using MNIST, NLP, Genomics and Mass Spectronomy datasets). It also has embedded feature selection, and since the networks are generally compact, they are relatively easy to intepret compared to standard Neural Networks.
+
+
+   <br>  <br>
   <a href="https://github.com/Tom-Watts/BlockyNet" style="color: #000000"> <b> Final Source Code  </b></a> <br>
   <a href="https://github.com/Tom-Watts/Neat-Experiments" style="color: #000000"> <b> Messy Experimentation Source Code  </b> </a>
 </p>
@@ -50,17 +53,16 @@
 months on. It is a cute, top down isometric game designed for both Mobile and PC devices. The
 main character, Squishy works as a pharmaceutical delivery boy for a manic professor. Note a lot of the code was written when I was starting out, so
 is not an indication of the quality of the code I write today ( I have improved a lot! ). </p>
-<center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/nKJUGGuWmWg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
-</center>
+
+<a href="https://youtu.be/nKJUGGuWmWg" style="color: #000000"> <b> Video Demo  </b></a> <br>
   <a href="https://github.com/Tom-Watts/ZonkoZonko-Game" style="color: #000000"> <b> Source Code  </b></a> <br>
   <hr>
 
 <h3>Zompy Store</h3>
-A front end wrapper for a Shopify store, made in the space of 5 days. Made using: Ionic, TypeScript and GraphQL.
-<br>
-<a href="https://youtu.be/BN6A6zoGWgM" style="color: #000000"> <b> Video Demo  </b></a> <br>
+Fully functional front end wrapper for a Shopify store. This was intended to be a clone of the Wish App. Made using: Ionic, TypeScript and GraphQL.
+<br> <br>
 
+<a href="https://youtu.be/BN6A6zoGWgM" style="color: #000000"> <b> Video Demo  </b></a> <br>
   <a href="https://github.com/Tom-Watts/Zompy-Store" style="color: #000000"> <b> Source Code  </b></a> <br>
 
 
