--- a/skills.html
+++ b/skills.html
@@ -36,7 +36,7 @@
     Deep Neural Networks: (Basic experience) CNNs, LSTMS <br>
     Statistics and Bayesian Inference <br>
     Time Series: Kalman Filters, ARIMA, GARCH, Wavelets <br>
-    Reinforcement Learning: (Learning at the moment) DQN, AC2, NeuroEvolution (NEAT) <br>
+    Reinforcement Learning: (Learning at the moment) DQN, A2C, NeuroEvolution (NEAT) <br>
     Optimization: Evolutionary Computation, Dynamic Programming <br>
     Traditional ML tools: SVMs, KNN, Random Forests, Gradient Boosting, OLS.. <br>
     Big Data: SQL, Feature Selection and Extraction methods, Pipelines
@@ -44,9 +44,9 @@
 
 
   	<li> <b> Software Development </b> <br>
-      I have 3+ years experience writing software in over 10 languages. <br>
+      3+ years experience writing software in around 10 languages. <br>
       Clean, functional, modular and easy to maintain code. <br>
-      C# with Unity3d for game development.
+      A focus on C# with Unity3d for game development.
 </li>  <br>
 
 <li>   <b> Web and Mobile Development </b> <br>
