--- a/about.html
+++ b/about.html
@@ -2,8 +2,9 @@
 <html lang="en" >
 
 <head>
+  <link rel="icon" href="tws.png">
   <meta charset="UTF-8">
-  <title>Projects</title>
+  <title>Tom Watts - About</title>
 
 
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Muli'>
@@ -21,19 +22,72 @@
     <a href="index.html" > Home </a> |
     <a href="mailto:tom@tomwatts.co.nz"> Email </a> |
     <a href="https://twitter.com/zonkosoft"> Twitter </a> |
-    <a href="skills.html"> Skills </a> |
     <a href="https://github.com/Tom-Watts"> GitHub </a>
     </div>
 
   <div id="container">
 <header>
-	<h1>Recent Projects</h1>
+	<h1>About me</h1>
 </header>
 
 <main>
-	<h3>Deep Reinforcement Learning for Games</h3>
-	<p>Coming soon!</p>
-	<hr>
+  I love Machine Learning, Software, Games and Music :-)
+  <hr>
+
+  <h3>Technical Skills </h3>
+  <ul>
+  <li>  <b> Machine Learning </b> <br>
+    Deep Learning: PyTorch, TensorFlow, Scikit-Learn, most popular Python libraries<br>
+    Evolutionary Computation: Generative AI, Optimization <br>
+    Statistics: Bayesian Inference, Designing Robust Models, Probability  <br>
+    Time Series: Kalman Filters, ARIMA, GARCH, Wavelets <br>
+    Reinforcement Learning: (Learning at the moment) DQN, A2C, NeuroEvolution (NEAT) <br>
+    Traditional Machine Learning: SVMs, KNN, Random Forests, Gradient Boosting, OLS.. <br>
+    Big Data: SQL, Feature Selection and Extraction methods, Pipelines
+  </li> <br>
+
+
+    <li> <b> Software Development </b> <br>
+      3+ years experience writing software in around 10 languages. <br>
+      Clean, functional, modular and easy to maintain code. <br>
+      A focus on C# with Unity Engine for game development. <br>
+      GraphQL and REST API design. <br>
+      Web Frameworks: Angular, React, Ionic (HTML, CSS)<br>
+  </li>  <br>
+
+
+
+    <li> <b>Languages </b> <br>
+       Python, C#, Javascript/Typescript, Haskell, R, C, Java </li>  <br>
+
+       <li> <b>Research </b> <br>
+         Coming up with creative new ideas, implementing/replicating cutting edge ML papers.
+
+         <br> <br>
+
+
+  <li>
+  <b>  Things I'm learning next: </b> <br>
+   BERT, Transformer XL, YoloNet, Hadoop, Spark, Proximal Policy Optimization
+  </li>
+  </ul>
+
+  <h3>3rd Year Computer Science and Engineering Courses taken:</h3>
+  <ul>
+    <li> COMP307: Artificial Intelligence (A+)</li>
+    <li> SWEN325: Mobile Development (A+)</li>
+    <li> COMP309: Machine Learning (A+)</li>
+    <li> COMP361: Design and Analysis of Algorithms (A)</li>
+    <li> NWEN305: Advanced Network Applications (A)</li>
+    <li> COMP304: Programming Langauges (A)</li>
+    </ul>
+
+  <br>
+
+  <hr>
+
+  <h1>Favourite Recent Projects: </h1>
+
 	<h3>Blocky Net: A new method of NeuroEvoluton</h3>
 	<p>
     NeuroEvolution is the process of evolving the weights, parameters and structures of Neural Networks. Currently the most popular method is called NEAT (NeuroEvolution of Augmenting Topologies).
@@ -57,13 +111,6 @@ is not an indication of the quality of the code I write today ( I have improved 
 <a href="https://youtu.be/nKJUGGuWmWg" style="color: #000000"> <b> Video Demo  </b></a> <br>
   <a href="https://github.com/Tom-Watts/ZonkoZonko-Game" style="color: #000000"> <b> Source Code  </b></a> <br>
   <hr>
-
-<h3>Zompy Store</h3>
-Fully functional front end wrapper for a Shopify store. This was intended to be a clone of the Wish App. Made using: Ionic, TypeScript and GraphQL.
-<br> <br>
-
-<a href="https://youtu.be/BN6A6zoGWgM" style="color: #000000"> <b> Video Demo  </b></a> <br>
-  <a href="https://github.com/Tom-Watts/Zompy-Store" style="color: #000000"> <b> Source Code  </b></a> <br>
 
 
 </main>
