--- a/skills.html
+++ b/skills.html
@@ -2,6 +2,7 @@
 <html lang="en" >
 
 <head>
+  <link rel="icon" href="tws.png">
   <meta charset="UTF-8">
   <title>Tom Watts</title>
 
@@ -80,7 +81,7 @@
     <ul>
       <li> Cat Magician (A+)</li>
       </ul>
-
+ <br>
 
 
 </main>
