--- a/about.html
+++ b/about.html
@@ -31,28 +31,31 @@
 </header>
 
 <main>
-  I love Machine Learning, Software, Games and Music :-)
-  <hr>
+  <!-- I love Machine Learning and Software Development. -->
+  <!-- <hr> -->
 
   <h3>Technical Skills </h3>
   <ul>
-  <li>  <b> Machine Learning </b> <br>
+  <li>  <b> Machine Learning / Statistics </b> <br>
     Deep Learning: PyTorch, TensorFlow, Scikit-Learn, most popular Python libraries<br>
-    Evolutionary Computation: Generative AI, Optimization <br>
-    Statistics: Bayesian Inference, Designing Robust Models, Probability  <br>
-    Time Series: Kalman Filters, ARIMA, GARCH, Wavelets <br>
-    Reinforcement Learning: (Learning at the moment) DQN, A2C, NeuroEvolution (NEAT) <br>
+    Statistics: Designing Robust Models, Bayesian Inference, Probability  <br>
+    Time Series: Forecasting using Kalman Filters, ARIMA, GARCH, Wavelets <br>
+    Big Data: SQL, Feature Selection and Extraction methods, Pipelines <br>
     Traditional Machine Learning: SVMs, KNN, Random Forests, Gradient Boosting, OLS.. <br>
-    Big Data: SQL, Feature Selection and Extraction methods, Pipelines
+    Evolutionary Computation: NeuroEvolution, Generative AI, Optimization <br>
+    Reinforcement Learning: (Learning at the moment) DQN, A2C, NEAT <br>
   </li> <br>
 
 
     <li> <b> Software Development </b> <br>
       3+ years experience writing software in around 10 languages. <br>
+      Databases: PostgreSQL, MongoDB, SQLite <br>
       Clean, functional, modular and easy to maintain code. <br>
       A focus on C# with Unity Engine for game development. <br>
       GraphQL and REST API design. <br>
       Web Frameworks: Angular, React, Ionic (HTML, CSS)<br>
+
+
   </li>  <br>
 
 
@@ -61,7 +64,8 @@
        Python, C#, Javascript/Typescript, Haskell, R, C, Java </li>  <br>
 
        <li> <b>Research </b> <br>
-         Coming up with creative new ideas, implementing/replicating cutting edge ML papers.
+         I am a skilled technical writer, and capable of generating creative new ideas for unsolved problems.
+         <!-- Coming up with creative new ideas, implementing/replicating cutting edge ML papers. -->
 
          <br> <br>
 
