--- a/about.html
+++ b/about.html
@@ -31,15 +31,14 @@
 </header>
 
 <main>
-  <!-- I love Machine Learning and Software Development. -->
   <!-- <hr> -->
 
   <h3>Technical Skills </h3>
   <ul>
   <li>  <b> Machine Learning / Statistics</b> <br>
-    Deep Learning: PyTorch, TensorFlow, Scikit-Learn, most popular Python libraries<br>
+    Deep Learning: TensorFlow, PyTorch, Scikit-Learn, most popular Python libraries<br>
     Statistics: Designing Robust Models, Bayesian Inference, Probability  <br>
-    Time Series: Forecasting using Kalman Filters, ARIMA, GARCH, Wavelets <br>
+    Time Series: Forecasting using Kalman Filters, ARIMA, GARCH <br>
     Big Data: SQL, Feature Selection and Extraction methods, Pipelines <br>
     Traditional Machine Learning: SVMs, KNN, Random Forests, Gradient Boosting, OLS.. <br>
     Evolutionary Computation: NeuroEvolution, Generative AI, Optimization <br>
@@ -49,11 +48,11 @@
 
     <li> <b> Software Development </b> <br>
       3+ years experience writing software in around 10 languages. <br>
+      Full Stack Web: Angular, Node.js, React, Ionic, HTML, CSS<br>
       Databases: PostgreSQL, MongoDB, SQLite <br>
-      Clean, functional, modular and easy to maintain code. <br>
-      A focus on C# with Unity Engine for game development. <br>
       GraphQL and REST API design. <br>
-      Web Frameworks: Angular, React, Ionic (HTML, CSS)<br>
+      AWS, Google Cloud, Heroku <br>
+
 
 
   </li>  <br>
@@ -61,7 +60,7 @@
 
 
     <li> <b>Languages </b> <br>
-       Python, C#, Javascript/Typescript, Haskell, R, C, Java </li>  <br>
+       Python, Javascript, Haskell, Java, C#, R, C </li>  <br>
 
 
 
