--- a/about.html
+++ b/about.html
@@ -8,10 +8,7 @@
 
 
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Muli'>
-
       <link rel="stylesheet" href="css/style.css">
-
-
 </head>
 
 <body>
@@ -31,84 +28,54 @@
 </header>
 
 <main>
+  I'm interested in the cutting edge, weird side of Machine Learning. My current life focus is using
+  Computer Vision, Deep Reinforcement Learning and Evolutionary Computation to solve
+  immediate problems which humans face today. In my spare time I make music, games and
+  do theoretical research!
   <!-- <hr> -->
 
-  <h3>Technical Skills </h3>
+  <h3> Publications: </h3>
+  Evolving Compact Neural Networks - 2019, IEEE Congress on Evolutionary Computation (In review)
+
+
+
+  <h3>Technical Skills and Interests</h3>
   <ul>
-  <li>  <b> Machine Learning / Statistics</b> <br>
-    Deep Learning: TensorFlow, PyTorch, Scikit-Learn, most popular Python libraries<br>
-    Statistics: Designing Robust Models, Bayesian Inference, Probability  <br>
-    Time Series: Forecasting using Kalman Filters, ARIMA, GARCH <br>
-    Big Data: SQL, Feature Selection and Extraction methods, Pipelines <br>
-    Traditional Machine Learning: SVMs, KNN, Random Forests, Gradient Boosting, OLS.. <br>
-    Evolutionary Computation: NeuroEvolution, Generative AI, Optimization <br>
-    Reinforcement Learning: (Learning at the moment) DQN, A2C, NEAT <br>
+  <li>  <b> Machine Learning </b> <br>
+    Deep Learning: Computer Vision, Relational Reasoning, Memory Augmented Networks <br>
+    Evolutionary Computation: Generative A.I. <br>
+    Reinforcement Learning: A2C, PPO, DQNs, NEAT <br>
+    Traditional Methods: Bayesian Models, Statistics, Optimization..<br>
+
   </li> <br>
 
 
-    <li> <b> Software Development </b> <br>
-      3+ years experience writing software in around 10 languages. <br>
-      Full Stack Web: Angular, Node.js, React, Ionic, HTML, CSS<br>
-      Databases: PostgreSQL, MongoDB, SQLite <br>
+    <li> <b> Software </b> <br>
+      Languages: Python, Haskell, Javascript (and around 7 others) <br>
+      Web Development: Angular, React, Ionic, Node.js, HTML, CSS<br>
+      Cloud infrastructure: Google Cloud, AWS (Learning currently) <br>
+      Data Engineering: (Learning currently) Pipelines, SQL, NoSQL (Mongo DB etc..) <br>
       GraphQL and REST API design. <br>
-      AWS, Google Cloud, Heroku <br>
-
-
-
   </li>  <br>
 
+</ul>
 
+  <h3> Recent Projects </h3>
+  You can see some recent work (including games and publication code) on my
+  <a href="http://github.com/Tom-Watts" style="color: #FFF; background: #222;"> GitHub</a>
 
-    <li> <b>Languages </b> <br>
-       Python, Javascript, Haskell, Java, C#, R, C </li>  <br>
-
-
-
-  <li>
-  <b>  Things I'm learning next: </b> <br>
-   BERT, Transformer XL, YoloNet, Hadoop, Spark, Proximal Policy Optimization
-  </li>
+  <h3> Education: </h3>
+  BSc Computer Science, BCom Economics (2014-2018, Victoria University of Wellington) <br><br>
+  <b> 3rd Year Computer Science and Engineering Courses taken: </b>
+<ul>
+  <li> COMP307: Artificial Intelligence (A+)</li>
+  <li> SWEN325: Mobile Development (A+)</li>
+  <li> COMP309: Machine Learning (A+)</li>
+  <li> COMP361: Design and Analysis of Algorithms (A)</li>
+  <li> NWEN305: Advanced Network Applications (A)</li>
+  <li> COMP304: Programming Langauges (A)</li>
   </ul>
 
-  <h3>3rd Year Computer Science and Engineering Courses taken:</h3>
-  <ul>
-    <li> COMP307: Artificial Intelligence (A+)</li>
-    <li> SWEN325: Mobile Development (A+)</li>
-    <li> COMP309: Machine Learning (A+)</li>
-    <li> COMP361: Design and Analysis of Algorithms (A)</li>
-    <li> NWEN305: Advanced Network Applications (A)</li>
-    <li> COMP304: Programming Langauges (A)</li>
-    </ul>
-
-  <br>
-
-  <hr>
-
-  <h1>Favourite Recent Projects: </h1>
-
-	<h3>Blocky Net: A new method of NeuroEvoluton</h3>
-	<p>
-    NeuroEvolution is the process of evolving the weights, parameters and structures of Neural Networks. Currently the most popular method is called NEAT (NeuroEvolution of Augmenting Topologies).
-    As part of a paid summer research scholarship (funded by Victoria University of Wellington) I was tasked with coming up
-    with a new algorithm which can work well in high dimensional domains (such as Computer Vision and Genomics). Currently NEAT struggles on high dimensional datasets. Initially I experimented using backpropagation with PyTorch as a local seach method for the weights of the networks, however I soon found finding the correct structure (or topology) is as important as learning weights. I then introduced a method which uses mutual information for selecting inputs, and forming new nodes. Despite offering some improvements, these methods were still quite slow, particularly with higher dimensional input spaces. <br> <br>
-  Blocky Net: Is a totally new method of NeuroEvolution, where the types of hidden nodes (ReLU, Sigmoid, Tanh...), weights, and connections between layers are generated and optimized. This method is designed to overcome typical problems in NEAT such as bloated topologies, and slow learning times. The method generally outperforms NEAT in most high dimensional domains (using MNIST, NLP, Genomics and Mass Spectronomy datasets). It also has embedded feature selection, and since the networks are generally compact, they are relatively easy to intepret compared to standard Neural Networks.
-
-
-   <br>  <br>
-  <a href="https://github.com/Tom-Watts/BlockyNet" style="color: #000000"> <b> Final Source Code  </b></a> <br>
-  <a href="https://github.com/Tom-Watts/Neat-Experiments" style="color: #000000"> <b> Messy Experimentation Source Code  </b> </a>
-</p>
-	<hr>
-
-  <h3>Zonko Zonko Game</h3>
-  <p>This is an ongoing personal project made in Unity using C# which I have spent at least a few
-months on. It is a cute, top down isometric game designed for both Mobile and PC devices. The
-main character, Squishy works as a pharmaceutical delivery boy for a manic professor. Note a lot of the code was written when I was starting out, so
-is not an indication of the quality of the code I write today ( I have improved a lot! ). </p>
-
-<a href="https://youtu.be/nKJUGGuWmWg" style="color: #000000"> <b> Video Demo  </b></a> <br>
-  <a href="https://github.com/Tom-Watts/ZonkoZonko-Game" style="color: #000000"> <b> Source Code  </b></a> <br>
-  <hr>
 
 
 </main>
