--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ a {
 
 <div class="bgimg-1">
   <div class="top">
-    <a href="about.html"> About </a> |
+    <!-- <a href="about.html"> About </a> | -->
     <a href="mailto:tom@tomwatts.co.nz"> Email </a> |
     <a href="https://twitter.com/zonkosoft"> Twitter </a> |
     <a href="https://github.com/Tom-Watts"> GitHub </a>
