Fixed maito -> mailto

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ a {
 
 
   <div class="caption">
-    <span class="border"><a href="maito:tom@tomwatts.co.nz" style="text-decoration: none; color:#fff;"> tom@tomwatts.co.nz </a>
+    <span class="border"><a href="mailto:tom@tomwatts.co.nz" style="text-decoration: none; color:#fff;"> tom@tomwatts.co.nz </a>
     </span><br>
   </div>
 </div>
